--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -63,6 +63,16 @@
         }
     },
     "settingsTestSetting": "测试当前设置",
+
+    "settingsDistanceFilter": "位置更新距离({distanceFilter} 米)",
+    "@settingsDistanceFilter": {
+      "placeholders": {
+            "distanceFilter": {}
+        }
+    },
+    "settingsDistanceFilterHint": "设置位置更新的最小距离（单位：米），数值越小位置更新越频繁，但耗电量越高",
+    "settingsLocationUpdate": "位置更新设置",
+
     "settingsMapDataSection": "地图与数据",
     "settingsOfflineMap": "离线地图",
     "settingsManageOfflineMap": "管理已下载的地图",
